Done changes to use feign client instead of rest template